Opened 18 years ago

Closed 18 years ago

#842 closed bug (fixed)

BTranslationRoster shouldn't look in B_USER_ADDONS_DIRECTORY in Safe Mode

Reported by: korli Owned by: axeld
Priority: normal Milestone:
Component: - General Version:
Keywords: Cc: diver
Blocked By: Blocking:
Platform: All

Description

BTranslationRoster looks for translators in B_USER_ADDONS_DIRECTORY even in safe mode

src/kits/translation/TranslatorRoster.cpp

Change History (2)

comment:1 by diver, 18 years ago

Cc: diver added

comment:2 by korli, 18 years ago

Resolution: fixed
Status: newclosed

fixed in revision 18817.

Note: See TracTickets for help on using tickets.